--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -52,7 +52,7 @@
     color: hsl(0deg, 0%, 55%);
   }
 
-  [type="text"] {
+  input {
     background-color: hsl(0deg, 0%, 90%);
     padding: calc(var(--base-padding) * 0.7) calc(var(--base-padding) * 0.8);
     font-size: calc(var(--base-font-size, 1rem) * 1.05);
