--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,14 +1,6 @@
-@mixin fontFace($src, $weight) {
-  @font-face {
-    font-family: "Nunito";
-    src: url($src);
-    font-style: normal;
-    font-weight: $weight;
-  }
+@font-face {
+  font-family: "Nunito";
+  src: url("../assets/fonts/Nunito-variable-font.ttf");
+  font-weight: 400 900;
+  font-style: normal;
 }
-
-@include fontFace("../assets/fonts/Nunito-Regular.ttf", 400);
-@include fontFace("../assets/fonts/Nunito-Medium.ttf", 500);
-@include fontFace("../assets/fonts/Nunito-SemiBold.ttf", 600);
-@include fontFace("../assets/fonts/Nunito-Bold.ttf", 700);
-@include fontFace("../assets/fonts/Nunito-Black.ttf", 900);
