--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -8,7 +8,7 @@
       calc(var(--base-padding, 0.5em) * 3.5);
     background-color: var(--footer-bg-color);
     clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
-    color: var(--logo-color);
+    color: var(--icon-color);
     text-shadow: 0 2px 1px hsl(0 0% 0%/0.3);
 
     &:hover {
