--- a/src/scss/base/_boilerplate.scss
+++ b/src/scss/base/_boilerplate.scss
@@ -44,20 +44,24 @@ html {
   --font-wt-bold: calc(var(--font-wt-semi, 600) + 100);
   --font-wt-black: calc(var(--font-wt-bold, 700) + 200);
 
-  // Light Mode Colors
+  // Colors
   --cosmic-latte-color: 42, 100%, 95%;
   --orange-yellow-color: 41, 95%, 82%;
   --indian-red-color: 1, 69%, 60%;
   --vivid-burgundy-color: 343, 84%, 33%;
   --rusty-red-color: 352, 68%, 50%;
+  --cream-color: 76, 100%, 89%;
+  --white-color: hsl(0deg 0% 100%);
 
   // Dark Mode Colors
-  --mindaro-color: 76, 100%, 73%;
-  --violet-color: 292, 25%, 23%;
-  --yellow-green-color: 82, 59%, 56%;
-  --dark-purple-color: 293, 25%, 20%;
-  --cream-color: 76, 100%, 89%;
-  --white-color: hsl(0 0% 100%);
+  // --mindaro-color: 76, 100%, 73%;
+  // --violet-color: 292, 25%, 23%;
+  // --yellow-green-color: 82, 59%, 56%;
+  // --dark-purple-color: 293, 25%, 20%;
+  --pinky-red-color: 351, 74%, 56%;
+  --violet-color: 275, 37%, 18%;
+  --desaturate-pink-color: 340, 68%, 36%;
+  --dark-purple-color: 290, 38%, 20%;
 
   --body-bg-color: hsl(var(--cream-color));
   --header-bg-color: hsl(var(--orange-yellow-color));
@@ -70,17 +74,17 @@ html {
   --btn-border-color: hsl(var(--rusty-red-color));
   --btn-bg-color: hsl(var(--orange-yellow-color));
   --btn-text-color: var(--heading-color);
-  --logo-color: hsl(263deg, 45%, 30%);
+  --icon-color: hsl(263deg, 45%, 30%);
 
   @media (prefers-color-scheme: dark) {
     --header-bg-color: hsl(var(--dark-purple-color));
     --body-bg-color: hsl(var(--violet-color));
-    --logo-bg-1: hsl(var(--yellow-green-color));
-    --logo-bg-2: hsl(var(--mindaro-color));
+    --logo-bg-1: hsl(var(--desaturate-pink-color));
+    --logo-bg-2: hsl(var(--pinky-red-color));
     --logo-bg-3: hsl(var(--cream-color));
     --btn-bg-color: hsl(var(--dark-purple-color));
-    --btn-text-color: hsl(var(--mindaro-color));
-    --logo-color: hsl(264deg, 50%, 85%);
+    --btn-text-color: hsl(var(--pinky-red-color));
+    --icon-color: hsl(264deg, 50%, 85%);
   }
 }
 
